Added Display options for one or two players

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_executable(Tic_Tac_Toe main.cpp
         computerPlayer.h
         computerPlayer.cpp
         Display.h
-        Display.cpp)
+        Display.cpp
+        HumanPlayer.cpp)
